cmake_minimum_required(VERSION 3.17)
project(algoClass C)

set(CMAKE_C_STANDARD 99)

add_executable(algoClass zzz.c List.c List.h String.c String.h Stack.c Stack.h Queue.c Queue.h Tree.c Tree.h ThrTree.c ThrTree.h Set.c Set.h Sort.c Sort.h Util.c Util.h Graph.c Graph.h BST.c BST.h Dic.c Dic.h AVL.c AVL.h Heap.c Heap.h)